small.ini now the best known: no adadelta, no beam

--- a/tests/small-adadelta-beam.ini
+++ b/tests/small-adadelta-beam.ini
@@ -10,7 +10,7 @@ epochs=2
 train_dataset=<train_data>
 val_dataset=<val_data>
 trainer=<trainer>
-runners=[<runner_greedy>]
+runners=[<runner_1>,<runner_2>]
 postprocess=None
 evaluation=[(target, <bleu>)]
 logging_period=20
@@ -36,6 +36,7 @@ class=evaluators.bleu.BLEUEvaluator
 class=config.utils.dataset_from_files
 s_source=tests/data/train.tc.en
 s_target=tests/data/train.tc.de
+preprocessors=[(source, source_chars, processors.helpers.preprocess_char_based)]
 lazy=True
 
 [val_data]
@@ -44,6 +45,7 @@ lazy=True
 class=config.utils.dataset_from_files
 s_source=tests/data/val.tc.en
 s_target=tests/data/val.tc.de
+preprocessors=[(source, source_chars, processors.helpers.preprocess_char_based)]
 
 [val_data_no_target]
 ; Validation data, the languages are not necessary here, encoders and decoders
@@ -79,9 +81,10 @@ save_file=tests/tmp-test-output/decoder_vocabulary.pickle
 overwrite=True
 
 [decoder]
-class=decoders.monster_decoder.Decoder
+class=decoders.decoder.Decoder
 name=decoder
 encoders=[<encoder>]
+project_encoder_outputs=True
 rnn_size=8
 embedding_size=9
 use_attention=True
@@ -96,8 +99,22 @@ class=trainers.cross_entropy_trainer.CrossEntropyTrainer
 decoders=[<decoder>]
 l2_weight=1.0e-8
 clip_norm=1.0
+optimizer=<adadelta>
 
-[runner_greedy]
-class=runners.runner.GreedyRunner
-output_series=target
+[adadelta]
+class=config.utils.adadelta_optimizer
+epsilon=1.0e-6
+rho=0.95
+
+[runner_1]
+; This block is used for both validation and testing to run the model on
+; a given dataset.
+class=runners.rnn_runner.RuntimeRnnRunner
 decoder=<decoder>
+output_series=target
+postprocess=processors.helpers.untruecase
+
+[runner_2]
+class=runners.runner.GreedyRunner
+decoder=<decoder>
+output_series=target_greedy
