fertility model & publish attention

--- a/tests/fertility.ini
+++ b/tests/fertility.ini
@@ -79,11 +79,16 @@ name="coverage"
 encoder=<encoder>
 decoder=<decoder>
 weight=0.1
-use_fertility=False
+fertility_model=<fertility>
+
+[fertility]
+class=decoders.coverage.FertilityModel
+name="fertility"
+encoder=<encoder>
 
 [trainer]
 class=trainers.generic_trainer.GenericTrainer
-objectives=[<xent>]
+objectives=[<xent>,<coverage>]
 l2_weight=1.0e-8
 clip_norm=1.0
 
