--- a/tests/fertility.ini
+++ b/tests/fertility.ini
@@ -8,7 +8,7 @@ epochs=2
 train_dataset=<train_data>
 val_dataset=<val_data>
 trainer=<trainer>
-runners=[<runner>]
+runners=[<runner>,<coverage_runner>]
 postprocess=None
 evaluation=[("target", <bleu>), ("target", evaluators.ter.TER)]
 logging_period=20
@@ -96,3 +96,10 @@ clip_norm=1.0
 class=runners.runner.GreedyRunner
 decoder=<decoder>
 output_series="target"
+
+[coverage_runner]
+class=runners.coverage_runner.CoverageRunner
+output_series="coverage"
+encoder=<encoder>
+decoder=<decoder>
+fertility=<fertility>
