runner for printing out learned representations

--- a/tests/bahdanau.ini
+++ b/tests/bahdanau.ini
@@ -10,7 +10,7 @@ epochs=2
 train_dataset=<train_data>
 val_dataset=<val_data>
 trainer=<trainer>
-runners=[<runner>]
+runners=[<runner>,<representation_runner>]
 postprocess=None
 evaluation=[("target", <bleu>)]
 logging_period=20
@@ -107,3 +107,8 @@ clip_norm=1.0
 class=runners.runner.GreedyRunner
 output_series="target"
 decoder=<decoder>
+
+[representation_runner]
+class=runners.representation_runner.RepresentationRunner
+encoder=<encoder>
+output_series="encoded"
